epic-echoserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epic-demows
  namespace: gtw-test
  labels:
    app.kubernetes.io/name: epic-demows
    app.kubernetes.io/part-of: epic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: epic-demows
      app.kubernetes.io/part-of: epic
  template:
    metadata:
      labels:
        app.kubernetes.io/name: epic-demows
        app.kubernetes.io/part-of: epic
    spec:
      containers:
      - name: epic-demows
        image: registry.gitlab.com/acnodal/epic-echoserver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: podinfo
          mountPath: /etc/podinfo
      serviceAccount: epic-demows
      volumes:
      - name: podinfo
        downwardAPI:
          items:
          - path: labels
            fieldRef:
              fieldPath: metadata.labels
---
kind: Service
apiVersion: v1
metadata:
  name: epic-demows
  namespace: gtw-test
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: epic-demows
  ports:
  - port: 80
    targetPort: 8080
    name: http
